--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@ironh/eslint-config": "^0.0.2",
     "bcryptjs": "^2.4.3",
+    "cloudinary": "^1.15.0",
     "connect-mongo": "^3.0.0",
     "cookie-parser": "^1.4.4",
     "debug": "^4.1.1",
