--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "http-errors": "^1.7.3",
     "mongoose": "^=5.6.13",
     "morgan": "^1.9.1",
+    "multer": "^1.4.2",
+    "multer-storage-cloudinary": "^2.2.1",
     "serve-favicon": "^2.5.0"
   },
   "devDependencies": {
