--- a/client/package.json
+++ b/client/package.json
@@ -4,11 +4,19 @@
   "private": true,
   "proxy": "http://localhost:3000",
   "dependencies": {
+    "@fortawesome/fontawesome": "^1.1.8",
+    "@fortawesome/fontawesome-svg-core": "^1.2.25",
+    "@fortawesome/free-brands-svg-icons": "^5.11.2",
+    "@fortawesome/free-solid-svg-icons": "^5.11.2",
+    "@fortawesome/react-fontawesome": "^0.1.5",
     "axios": "^0.19.0",
     "bootstrap": "^4.3.1",
     "react": "^16.9.0",
     "react-bootstrap": "^1.0.0-beta.12",
     "react-dom": "^16.9.0",
+    "react-fontawesome": "^1.6.1",
+    "react-native": "^0.61.2",
+    "react-native-svg": "^9.11.1",
     "react-router-dom": "^5.1.0",
     "react-scripts": "3.1.2"
   },
