--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "cloudinary": "^1.15.0",
     "connect-mongo": "^3.0.0",
     "cookie-parser": "^1.4.4",
+    "datauri": "^2.0.0",
     "debug": "^4.1.1",
     "dotenv": "^8.1.0",
     "express": "^4.17.1",
