--- a/client/package.json
+++ b/client/package.json
@@ -12,6 +12,7 @@
     "@fortawesome/react-fontawesome": "^0.1.5",
     "axios": "^0.19.0",
     "bootstrap": "^4.3.1",
+    "query-string": "^6.8.3",
     "react": "^16.9.0",
     "react-bootstrap": "^1.0.0-beta.12",
     "react-color": "^2.17.3",
